# libreactor_kafka

./: Makefile.am  configure.ac  libreactor_kafka.pc.in
example/: publisher.c  subscriber.c
src/: reactor_kafka.h
src/reactor_kafka/: reactor_kafka.c  reactor_kafka.h  reactor_kafka_consumer.c  reactor_kafka_consumer.h  reactor_kafka_producer.c  reactor_kafka_producer.h
